test/regtest/cases/errors/check_assign_ref.kum
алг нач
    лог успех
    цел k = лит_в_цел("123", успех)
    вывод успех, нс
кон